--- a/demo.html
+++ b/demo.html
@@ -5,6 +5,6 @@
 		<title></title>
 	</head>
 	<body>
-		<canvas id="" width="" height=""></canvas>
+		<canvas id="" width="" height="">whaahsdhadkahdkjah</canvas>
 	</body>
 </html>
